# ruff-vs-black

./: README.md  pyproject.toml
src/ruff_vs_black/: assert.py  assert_bug.py  dict.py  return.py  return_bug.py  tuple.py
