[project]
name = "ruff-vs-black"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Chris Pryer", email = "cnpryer@gmail.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff~=0.0.272",
    "black~=23.3.0",
]

[tool.rye.scripts]

[tool.hatch.metadata]
allow-direct-references = true
